master: fix shift

--- a/src/containers/Game/style.module.scss
+++ b/src/containers/Game/style.module.scss
@@ -30,7 +30,7 @@
     will-change: transform;
     cursor: grab;
     user-select: none;
-    transform-origin: top right;
+    // transform-origin: top right;
 
     &.active {
         z-index: 50;
